起始位置候选功能添加

--- a/route.html
+++ b/route.html
@@ -27,6 +27,7 @@
         <script src="routing.js"></script>
 
         <script>
+        //控制每一次显示panel的行为
             var countclick = 0;
             $(document).ready(function(e) {
                 $("#sbutton").click(function(e) {
@@ -57,7 +58,7 @@
                 Hide Search
             </button>
         </div>
-        <div id="iSearch" style="padding:2px 0px 0px 5px;font-size:12px; z-index:1000; background-color:green;height:100%; width:200px; position:fixed; left:0px; top:0px;">
+        <div id="iSearch" style="padding:2px 0px 0px 5px;font-size:12px; z-index:1000; background-color:white;height:100%; width:200px; position:fixed; left:0px; top:0px;">
             <div>
                 驾车导航查询 <b>从：</b>
                 <input type="text" id="city" name="city" value="城市名或区号" />
