添加ajax测试代码，下一步期待服务器交互。

--- a/route.html
+++ b/route.html
@@ -82,7 +82,7 @@
                 </div></td>
             </tr>
             <tr>
-                <td><div id="result" name="result" style="overflow:auto;margin-top:5px;width:200px;height:255px"></div>
+                <td><div id="result" name="result" style="overflow:auto;margin-top:5px;width:200px;height:50%"></div>
         </div>
     </body>
 </html>
