完善了UI，添加了网络错误信息，重写了定位。遗留问题：城市选择功能还未添加，二义性关键词候选显示样式没有更改，悬停道路选中功能未更改。

--- a/route.html
+++ b/route.html
@@ -14,7 +14,7 @@
             <!-- 顶部导航 -->
             <img id="SidebarButton" src="./images/showsidebar.png">
             <div id="CityOption">
-                <img class="doLocation" id="LocBlue" src="./images/locblue.png"/>
+                <img id="LocBlue" src="./images/locblue.png"/>
                 <div id="ChooseCity">
                     <p id="CityName">乌鲁木齐</p>
                     <img id="OptBlue" src="./images/optblue.png" />
@@ -23,27 +23,22 @@
         </div>
 
         <div id="MapView"></div>
+        <div style="z-index:0;position:fixed;top:30%;width:100%;height:100%;">
+            <p style="font-size:30px;text-align:center;color:#2f7d99;">T_T</p>
+            <p style="font-size:12px;text-align:center;color:black;">该死的高德地图打不开了……<br/>要不您检查一下网络连接，<br/>或者过会试试？</p>
+        </div>
 
         <div id="SearchPanel" style=";">
-            <div id="SearchPanelLabel">
-                       <p>线路检索</p>
+            <div id="SearchPanelLabel"><p>线路检索</p></div>
+            <div id="SearchBox">
+                <input type="hidden" id="city" name="city" value="城市名或区号" />
+                <input type="text" id="startpoint" class="inputBox" name="keyword" value=""/>
+                <img src="./images/locyellow.png" id="UseCurrentPos" style="position:relative;top:5px;left:2px;"/>
+                <input type="text" class="inputBox" id="endpoint" name="keyword1" value=""/>
+                <img src="./images/search.png" id="Search" class="doLocation" style="position:relative;top:5px;left:2px;" />
+                <input type="hidden" id="avoid" name="avoid" />
             </div>
-            <div>
-                驾车导航查询 <b>从：</b>
-                <input type="text" id="city" name="city" value="城市名或区号" />
-                <input type="text" id="keyword" name="keyword" value=""/>
-                <script>
-                    function useCurPos() {
-                        document.getElementById("keyword").value = MYPOS;
-                    }
-                </script>
-                <input type="button" onclick="useCurPos();void(0);" value="使用当前位置" />
-                <b>到：</b>
-                <input type="text" id="keyword1" name="keyword1" value=""/>
-                <input type="text" id="avoid" name="avoid" />
-                <input type="button" value="查询" onclick="route_search()"/>
-                <br>
-            </div>
+            
             <tr>
                 <td>
                 <div style="padding:0px 0 4px 2px; background-color:#D1EEEE">
