完善了定位，重新设置了当前城市，增添了道路信息，客户端查询功能基本完成。下一步进行ajax的处理

--- a/route.html
+++ b/route.html
@@ -38,10 +38,26 @@
             </p>
         </div>
         <div id="CityChooseBox">
-            <p>
-                北京 上海 广州 天津 深圳 青岛
+            <p class="cityname">
+                北京
             </p>
-            <input type="text" class="inputBox" value="其他" />
+            <p class="cityname">
+                上海
+            </p>
+            <p class="cityname">
+                广州
+            </p>
+            <p class="cityname">
+                天津
+            </p>
+            <p class="cityname">
+                深圳
+            </p>
+            <p class="cityname">
+                青岛
+            </p>
+            <br/>
+            <input type="text" id="inputCityBox" class="inputBox" value="其他" />
             <div id="CityCommit">
                 提交
             </div>
@@ -63,14 +79,12 @@
                 <img src="./images/search.png" id="Search" class="doLocation" style="position:relative;top:5px;left:2px;" />
             </div>
 
-            <tr>
-                <td>
-                <div style="padding:0px 0 4px 2px; background-color:#D1EEEE">
-                    <b>查询结果:</b>
-                </div></td>
-            </tr>
-            <tr>
-                <td><div id="result" name="result" style="overflow:auto;margin-top:5px;width:200px;height:50%"></div>
+            <div style="position:absolute;top:150px;left:0px;width:255px;">
+                <div style="padding:4px 0px 4px 9px; background-color:#373737;color:#eeeeee;">
+                    <b>查询结果</b>
+                </div>
+                <div id="SearchResult" name="result"></div>
+            </div>
         </div>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
