添加实时交通图层。

--- a/route.html
+++ b/route.html
@@ -13,6 +13,7 @@
         <div id="NaviBar">
             <!-- 顶部导航 -->
             <img id="SidebarButton" src="./images/showsidebar.png">
+            <img id="RealTimeSwitch" src="./images/rt.png">
             <div id="CityOption">
                 <img id="LocBlue" src="./images/locblue.png"/>
                 <div id="CityChoose">
@@ -32,7 +33,7 @@
             <p style="font-size:12px;text-align:center;color:black;">
                 该死的高德地图打不开了……
                 <br/>
-                要不您检查一下网络连接，
+                您请稍候，检查一下网络连接，
                 <br/>
                 或者过会试试？
             </p>
