--- a/route.html
+++ b/route.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no" >
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="style.css" type="text/css" />
 
         <title>驾车导航查询</title>
