解决了页面滚动的bug

--- a/route.html
+++ b/route.html
@@ -91,6 +91,11 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
         <script src="http://webapi.amap.com/maps?v=1.1&key=fce4fe9f75597b394fad3b98ed53e43d"></script>
+        <script>
+            document.ontouchmove = function(e){
+                e.preventDefault();
+            }
+        </script>
         <script src="./scripts/routing.js"></script>
         <script src="./scripts/interact.js"></script>
         <script src="./scripts/retina.js"></script>
