--- a/route.html
+++ b/route.html
@@ -90,7 +90,7 @@
         </div>
 
         <script src="./scripts/retina.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script src="./scripts/jquery-1.9.1.js"></script>
         <script src="http://webapi.amap.com/maps?v=1.1&key=fce4fe9f75597b394fad3b98ed53e43d"></script>
         <script src="./scripts/routing.js"></script>
         <script src="./scripts/interact.js"></script>
