Ajax添加服务器交互，worker添加

--- a/route.html
+++ b/route.html
@@ -75,9 +75,9 @@
                 <input type="hidden" id="city" name="city" value="021" />
                 <input type="hidden" id="avoid" name="avoid" />
 
-                <input type="text" id="startpoint" class="inputBox" name="keyword" value="输入起点"/>
+                <input type="text" id="startpoint" class="inputBox" name="keyword" placeholder="输入起点"/>
                 <img src="./images/locyellow.png" id="UseCurrentPos" style="position:relative;top:5px;left:2px;"/>
-                <input type="text" class="inputBox" id="endpoint" name="keyword1" value="输入终点"/>
+                <input type="text" class="inputBox" id="endpoint" name="keyword1" placeholder="输入终点"/>
                 <img src="./images/search.png" id="Search" class="doLocation" style="position:relative;top:5px;left:2px;" />
             </div>
 
